# credential-converter

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  example_ELM-to-OBv3.json  example_ELM_to_OBv3.json  example_OBv3-to-ELM.json  example_OBv3_to_ELM.json  example_ebsi-obv3.json
assertion_csvs/: Microcredential+Mapping_Assertion_ELM+Micro-Credential_20240208063519.csv  Microcredential+Mapping_Assertion_Open+Badges+2.0_2.0_20240221174535.csv  Microcredential+Mapping_Assertion_Open+Badges+3.0_3.0_20240301181832.csv
crates/cli/: Cargo.toml
crates/cli/examples/: json_paths.txt  schema.csv
crates/cli/src/: main.rs
crates/csv_mapper/: Cargo.toml  README.md  example-mapper.csv  test.json  test_copy.json  test_equivProps.csv
crates/csv_mapper/examples/: dummy.json  francisco-cruz.json
crates/csv_mapper/src/: demo_schema.rs  lib.rs  main.rs  mapping_data.rs  traverse_tree.rs
csv_mapper/: Cargo.toml  equivProps.csv  test.json  test_equivProps.csv
csv_mapper/src/: main.rs
desm/issuer_csvs/: Microcredential+Mapping_Issuer_Open+Badges+2.0_2.0_20240221184949.csv  Microcredential+Mapping_Issuer_Open+Badges+3.0_3.0_20240301193146.csv
elm/: vocab.json
example-json/elm/: request.json
example-json/w3vc/: example-w3vc.json
issuer_csvs/: Microcredential+Mapping_Issuer_ELM+-+Micro-Credential_20240206202405.csv
json/: output_credential.json  output_credential_ELM2OBv3.json
json/ebsi-elm/vcdm2.0-attestation-schema/: README.md  package.json  schema.json  schema.metadata.json
json/ebsi-elm/vcdm2.0-europass-edc-schema/: LICENSE  README.md  schema.json  (+2 more)
json/mapping/: custom_mapping.json  custom_mapping_ELM_OBv3.json  custom_mapping_ELM_OBv3_copy.json  custom_mapping_ELM_OBv3_latest.json  custom_mapping_ELM_OBv3_latest_copy.json  custom_mapping_OBv3_ELM_latest copy.json  custom_mapping_OBv3_ELM_latest.json
json/obv3/: obv3_schema.json
json/output/: example_ELM_to_OBv3.json  example_OBv3_to_ELM.json  readme.md
obv3/: example-obv3.json
res/: custom_mapping.json  elm_example.json  mapping.json  obv3_example.json  output_credential.json  source_credential_OBv3.json
src/: cli.rs  main.rs  mapper.rs  request.json  state.rs  test.json  test_master_schema.csv  translations.rs  validate.rs
src/backend/: candidate_value.rs  desm_mapping.rs  getters_resolvers.rs  headless_cli.rs  init_conversion.rs  jsonpointer.rs  leaf_nodes.rs  mod.rs  preload_p2.rs  repository.rs  resolve.rs  selector.rs  transformations.rs  update_display.rs  web.rs
src/cli/: Cargo.toml  request.json  t.json
src/cli/res/: custom_mapping.json  elm_example.json  output_credential.json  source_credential.json  source_credential_ELM.json
src/cli/src/: events.rs  jsonpointer.rs  logging.rs  main.rs  render.rs  repository.rs  state.rs  transformations.rs  utils.rs
src/cli/src/backend/: preload_p2.rs  repository.rs  selector.rs  transformations.rs
src/cli/src/credential_formats/: elm.rs  mod.rs  obv3.rs
src/cli/src/events/: mod.rs  p1_handler.rs  p2_handler.rs  p3_handler.rs
src/cli/src/locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  hr.json  hu.json  is.json  it.json  lt.json  lv.json  nl.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json
src/cli/src/render/: mapping_bars.rs  mod.rs  p1.rs  p2.rs  p2_popup.rs  p3.rs  p4.rs  popups.rs
src/events/: mod.rs  p1_handler.rs  p2_handler.rs  p2_p3_common.rs  p3_handler.rs  p4_handler.rs
src/locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  hr.json  hu.json  is.json  it.json  lt.json  lv.json  nl.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json
src/render/: mapping_bars.rs  mod.rs  p1.rs  p2.rs  p3.rs  p4.rs  popups.rs
test/: Achievement_Alignment.json_ELM  Achievement_Alignment_ELM.json  Basic_OpenBadgeCredential.json_ELM  Basic_OpenBadgeCredential_ELM.json  Bengales_highSchoolDiploma.json_OBv3.json  Complete_OpenBadgeCredential.json_ELM  Complete_OpenBadgeCredential_ELM.json  DigiComp Generic.json_OBv3.json  Diploma rntuo credential.json_OBv3.json  EndorsementCredential.json_ELM  EndorsementCredential_ELM.json  Francisco Cruz Argudo_Certificate of Completion.json_OBv3.json  Microcredential - Data and software business.json_OBv3.json  Skill_Assertion.json_ELM  Skill_Assertion_ELM.json  Transcript of records - generic.json_OBv3.json  sample_A.json_ELM  sample_A_ELM.json
(+18 files in other folders)
