[workspace]
members = [".", "crates/*", "src/*"]
resolver = "2"

[package]
name = "impierce-mapper"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["serde_derive", "derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = { version = "0.15", features = ["clap"] }
jsonschema = "0.17"
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cli = { path = "crates/cli" }
csv_mapper = { path = "crates/csv_mapper" }
ratatui = "0.26.3"
crossterm = "0.27.0"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "mapper"
path = "src/mapper.rs"
