[package]
name = "csv_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
OBv3 = { git = "https://github.com/impierce/digital-credential-data-models.git" } # rev = "" 

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
