[package]
name = "csv_mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonpath-rust = "0.5"
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde_json.workspace = true
tokio = { workspace = true }
#digital-credential-data-models = { path = "../../../digital-credential-data-models" }
digital-credential-data-models = { git = "https://github.com/impierce/digital-credential-data-models.git", branch = "feat/json-paths" }
log = "0.4.21"
env_logger = "0.11.3"
dotenvy = "0.15.7"

[lib]
name = "csv_mapper"
path = "src/lib.rs"
