[package]
name = "ipt_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["all-widgets"]}
strum = "0.26.2"
num-traits = "0.2.19"
num-derive = "0.4.2"
