[package]
name = "ipt_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["all-widgets"]}
strum = "0.26.2"
num-traits = "0.2.19"
num-derive = "0.4.2"
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.4.0"
color-eyre = "0.6.3"

regex = "1.10"
rust-i18n = "3.0"
config = "0.14"
serde_path_to_error = "0.1"
jsonpath-rust = "0.5"
